aws/ops/reports/_lastrun.log
  File "/home/runner/work/si/si/aws/ops/pending/2240_verify_demandgate.py", line 21
    print(f"\nexcluded destockers (DIO falling but revenue flat/down): {len(destock)} e.g.",[(r.get('ticker'),f\"dio{r.get('dio_chg_pct')}\",f\"rev{r.get('rev_growth_yoy')}\") for r in destock[:5]])
                                                                                                                ^
SyntaxError: unexpected character after line continuation character
